# DWToolkit

./: .gitignore
airflow_upgrade/: .airflow_upgrade.yml  README.md  RENAME_GUIDE.md  __init__.py  pyproject.toml  requirements.txt
airflow_upgrade/cli/: __init__.py  main.py
airflow_upgrade/core/: __init__.py  config_loader.py  migrator.py  transformer.py  validator.py
airflow_upgrade/rules/: __init__.py  config.py  imports.py  operators.py
airflow_upgrade/tests/: test_migrator.py  test_parser.py  test_tools.py  test_transformer.py  test_validator.py
airflow_upgrade/tests/sample_dags/: sample_dag_v3.py
airflow_upgrade/tools/: __init__.py  backup_manager.py  flake8_integration.py
airflowupdt/: README.md  __init__.py  pyproject.toml  requirements.txt
airflowupdt/cli/: __init__.py  main.py
airflowupdt/core/: __init__.py  migrator.py  parser.py  transformer.py
airflowupdt/rules/: __init__.py
airflowupdt/tests/: test_migrator.py  test_parser.py  test_tools.py  test_transformer.py  test_validator.py
airflowupdt/tests/sample_dags/: sample_dag_v2.py
airflowupdt/tools/: __init__.py  ruff_integration.py
casegen/: README.md  case.xlsx  casegen.py  config.yml  create_sample_task.py  task.xlsx
code2script/: README.md  code2script.py  config.yml
code2script/code/: query1.sql
code2script/code/etl/: load_data.sql
code2script/script/: query1.script
code2script/script/etl/: load_data.script
codetyp/: classification_result.xlsx  codetyp.py  config.yml  readme.md  requirements.txt
codetyp/code/: flink_example.py  flink_java_example.java  hidden_call_example.py  hive_example.sql  hive_python_example.py  mixed_example.py  spark_example.py  spark_submit_example.sh
dag_parser/: README.md  config.yml  dag_parser.py
dag_parser/dags/: example_dag.py
filetag/: config.yml  filetag.py  readme.md  requirements.txt
jobgen/: config.yml  jobgen.py  readme.md  template.job
jobgen/job/: query1.job
jobgen/job/etl/: load_data.job
rerun/: common_init.sh  iniGetValue.sh  prog.ini  rerun.sh
spark_upgrade/: .spark_upgrade.yml  README.md  __init__.py  pyproject.toml  requirements.txt
spark_upgrade/cli/: __init__.py  main.py
spark_upgrade/config/: __init__.py  defaults.py  settings.py
spark_upgrade/core/: __init__.py  migrator.py  parser.py  transformer.py  validator.py
spark_upgrade/rules/: __init__.py  api_changes.py  config_updates.py  deprecations.py  syntax_changes.py
spark_upgrade/tests/fixtures/: sample_spark_code.py  sample_spark_code_upgraded.py
spark_upgrade/tests/integration/: test_workflow.py
spark_upgrade/tests/unit/: test_migrator.py  test_parser.py  test_transformer.py  test_validator.py
spark_upgrade/tools/: __init__.py  backup_manager.py  quality_checker.py  report_generator.py
sql_parser/: config.yaml  readme.md  sql_parser.py
sql_parser/input/: sample_queries.sql  sample_script.sh
sql_parser/input/folder/: sample_code.py  sample_etl.hql
sql_table_parser/: parse_result.txt  sample_queries.sql  sample_script.py  sample_script.sh  sql_table_parser.py
